--- a/.github/workflows/build_and_push_to_dockerhub.yml
+++ b/.github/workflows/build_and_push_to_dockerhub.yml
@@ -25,9 +25,9 @@ jobs:
           BASE_FROM_IMAGE="rabbitmq:${GITHUB_REF##*/v}"
           MANAGEMENT_POSTFIX='-management'
           echo "::set-output name=tag::${BASE_TAG}"
-          echo "::set-output name=from-image::rabbitmq:${BASE_FROM_IMAGE}"
+          echo "::set-output name=from-image::${BASE_FROM_IMAGE}"
           echo "::set-output name=tag-management::${BASE_TAG}${MANAGEMENT_POSTFIX}"
-          echo "::set-output name=from-image-management::rabbitmq:${BASE_FROM_IMAGE}${MANAGEMENT_POSTFIX}"
+          echo "::set-output name=from-image-management::${BASE_FROM_IMAGE}${MANAGEMENT_POSTFIX}"
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
