--- a/.github/workflows/build_and_push_to_dockerhub.yml
+++ b/.github/workflows/build_and_push_to_dockerhub.yml
@@ -30,6 +30,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: ./managment
+          context: ./management
           push: true
-          tags: ${{ steps.image-metadata.outputs.tag }}-managment
+          tags: ${{ steps.image-metadata.outputs.tag }}-management
